[gd_scene load_steps=2 format=3 uid="uid://glblcqj68bpp"]

[ext_resource type="Script" path="res://Flashcards/DeckInterface.gd" id="1_evomv"]

[node name="DeckInterface" type="Button"]
custom_minimum_size = Vector2(280, 300)
script = ExtResource("1_evomv")

[node name="DeckTitle" type="Label" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -23.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0
text = "Anatomie"

[connection signal="pressed" from="." to="." method="_on_pressed"]
